kubernetes/apps/kopiur-system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-ui
spec:
  parentRefs:
    - {name: envoy-internal, namespace: network}
  hostnames:
    - "kopia.mistelinn.org"
  rules:
    - backendRefs:
        - name: kopia-nas-kopia-ui
          port: 51515
